Add tile scaffold
